--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
     <p>It was a dark and stormy night...</p>
+    <p>(2)...in the middle of December. You're wearing a very warm winter jacket...</p>
 </body>
 </html>
