added third line of story

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <body>
     <p>It was a dark and stormy night...</p>
     <p>(2)...in the middle of December. You're wearing a very warm winter jacket...</p>
+    <h1>...But I was wearing board shorts and sitting on a beach drinking a mai thai!</h1>
 </body>
 </html>
