added third story line

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
 <body>
     <p>It was a dark and stormy night...</p>
     <p>(2)...in the middle of December. You're wearing a very warm winter jacket...</p>
     <h1>...But I was wearing board shorts and sitting on a beach drinking a mai thai!</h1>
+    <h3 style="color:blue;font-size:44px;">(2)...But you're FREEZING BECAUSE YOU'RE WEARING BOARD SHORTS ON A BEACH IN 50 DEGREE WEATHER!!!! You look up to the sky and sigh as a raptor (dinosaur) teleports down from the sky...</h3>
 </body>
 </html>
