added fifth line to story

--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <p>(2)...in the middle of December. You're wearing a very warm winter jacket...</p>
     <h1>...But I was wearing board shorts and sitting on a beach drinking a mai thai!</h1>
     <h3 style="color:blue;font-size:44px;">(2)...But you're FREEZING BECAUSE YOU'RE WEARING BOARD SHORTS ON A BEACH IN 50 DEGREE WEATHER!!!! You look up to the sky and sigh as a raptor (dinosaur) teleports down from the sky...</h3>
+    <h1>Then We loaded up the dinosaur on a space x rocket and blasted it to mars with pizza to start a new colony.</h1>
 </body>
 </html>
