--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="style.css"
+    </head>
 <body>
     <p>It was a dark and stormy night...</p>
     <p>(2)...in the middle of December. You're wearing a very warm winter jacket...</p>
